--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>CS-428 Virtual and Augmented Reality</title>
   </head>
   <body>
     <h1>CS-428 Virtual and Augmented Reality</h1>
