Change Honolulu_Desc Image Size

--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -10,7 +10,7 @@
     <div>
       <h2>Description</h2>
       <p>Augmented Reality app that shows 2 different scenes when the smartphone camera is pointed at the MergeCube or ClassCube.</p>
-      <img src="Images/Honolulu_Desc.png" width="300" height="300>
+      <img src="Images/Honolulu_Desc.png" width="300" height="300">
       <p>Image Placeholder</p>
       <p>There are the two different scenes that are visible on the cubes, as well as a Magic 8 Ball feature on one of the sides on each cube as shown below.</p>
       <p>Image Placeholder</p>
