Update Description Images

--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -11,13 +11,13 @@
       <h2>Description</h2>
       <p>Augmented Reality app that shows 2 different scenes when the smartphone camera is pointed at the MergeCube or ClassCube.</p>
       <img src="Images/Honolulu_Desc.png" width="300" height="300">
-      <p>Image Placeholder</p>
+      <img src="Images/Orlando_Desc.png" width="300" height="300">
       <p>There are the two different scenes that are visible on the cubes, as well as a Magic 8 Ball feature on one of the sides on each cube as shown below.</p>
-      <p>Image Placeholder</p>
+      <img src="Images/Magic_8_Ball_Desc.png" width="300" height="300">
       
       <p>To use the Magic 8 Ball feature, flip the cube upside down and then flip it right side up in order to see the different Magic 8 Ball sayings (This may not work immediately, and you might need to flip the cube around in different ways)</p> 
-      <p>Image Placeholder</p>
-      <p>Image Placeholder</p>
+      <img src="Images/Magic_8_Ball_Flip.png" width="300" height="300">
+      <img src="Images/Magic_8_Ball_New Saying.png" width="300" height="300">
     </div>
     <br>
     
