--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <body>
     <h1>CS-428 Virtual and Augmented Reality</h1>
     <h2>Alex Woo<h2>
-    <h3>Projects</h3>
+    <br>
+    <h2>Projects</h2>
+    <h3><a href="https://awoo8.github.io/CS-428/Project%201/index.html">Project 1 - Road to Nowhere</a></h3>
   </body>
 </html>
