--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <br>
     <h2>Projects</h2>
     <h3><a href="https://awoo8.github.io/CS-428/Project%201/index.html">Project 1 - Road to Nowhere</a></h3>
+    <h3><a href="https://jacjanowski.github.io/jjanow7/partials/project2.html">Project 2 - (Don't Fear) The Reaper</a></h3>
   </body>
 </html>
