--- a/student_choice.html
+++ b/student_choice.html
@@ -2,8 +2,89 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="style.css">
+    <meta charset="utf-8">
+
+    <base href="//preview.p5js.org/awoo8/present/iuCderZDS/">
+    <style>
+        html,
+        body {
+            background-color: #181a1b;
+            color: #e8e6e3;
+            margin: 20px;
+            padding: 0;
+            text-align: center;
+        }
+
+        h1,
+        h2,
+        h3,
+        p {
+            font-family: georgia;
+        }
+
+        p {
+            padding-top: 20px;
+            padding-left: 20px;
+            padding-right: 20px;
+            padding-bottom: 20px;
+            font-size: 25px;
+        }
+
+        li {
+            text-align: left;
+            font-size: 25px;
+        }
+
+        h1 {
+            font-size: 40px;
+        }
+
+        h2 {
+            font-size: 30px;
+        }
+
+        h3 {
+            font-size: 25px;
+        }
+
+        a {
+            color: #00ffff
+        }
+
+        .image {
+            width: 440px;
+            height: 300px;
+        }
+
+        #note {
+            font-size: 15px;
+        }
+
+        .columns {
+            float: left;
+            width: 50%;
+        }
+
+        .container {
+            position: relative;
+            border-style: solid;
+            border-width: 5px;
+            border-color: transparent;
+            padding-bottom: 10px;
+            padding-left: 30px;
+            width: 60%;
+            left: 20%;
+        }
+
+        #reference {
+            text-align: left;
+        }
+
+        .prosAndCons {
+            float: left;
+            width: 50%;
+        }
+    </style>
 </head>
 
 <body>
@@ -55,7 +136,7 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/sb_Er-9A01E" title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+            allowfullscreen=""></iframe>
     </div>
     <div class="container">
         <br>
@@ -116,6 +197,8 @@
             <li>No autosaves, inconsistent save points</li>
         </div>
     </div>
+
+
 
 </body>
 
