--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h3><a href="https://awoo8.github.io/CS-428/Project%201/index.html">Project 1 - Road to Nowhere</a></h3>
     <h3><a href="https://jacjanowski.github.io/jjanow7/partials/project2.html">Project 2 - (Don't Fear) The Reaper</a></h3>
     <h3><a href="https://awoo8.github.io/CS-428/student_choice.html">Student Choice - Sniper Elite VR</a></h3>
+    <h3><a href="https://jacjanowski.github.io/jjanow7/partials/project3.html">Project 3 - Perspective</a></h3>
   </body>
 </html>
